--- a/css/style.css
+++ b/css/style.css
@@ -10,53 +10,108 @@
   --primary-text-bg-color: #2c4857;
   --secondary-text-color: #2c4857;
   --secondary-text-bg-color: #b7dccb;
+  --gradient-black-to-primary: 
+    linear-gradient(90deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
+  --gradient-primary-to-black: 
+    linear-gradient(270deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
+}
+
+html {
+  height: 100%;
 }
 
 body {
+  overflow: hidden;
   background-color: var(--primary-color);
-  border-collapse: collapse;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 100px 300px 100px;
+  height: 100%;
   /*border: 3px solid green;*/
 }
 
-.container-side {
+.grid-3-cols {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: auto 70% auto;
+  /*border: 3px solid green;*/
+}
+
+.container-left {
   width: auto;
+  background: var(--gradient-black-to-primary);
+}
+
+.container-right {
+  width: auto;
+  background: var(--gradient-primary-to-black);
 }
 
 .logo {
   display: inline;
   font-family: "Modak";
-  font-size: 130pt;
+  font-size: 11rem;
   font-weight: 400;
   line-height: 1;
   text-align: start;
+  /*text-decoration-line: underline;*/
   color: var(--primary-text-color);
 }
 
 .leaf {
-  width: 140px;
-  height: 150px;
+  display: inline;
+  width: 10rem;
+  height: 10rem;
   margin: 0px;
   padding: 0px;
   vertical-align: top;
 }
 
 .container-middle {
-  min-width: 600px;
-  max-width: 1100px;
-  padding: 30px;
-  margin: auto;
-  width: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  margin-top: 1em;
+  min-width: 48em;
+  max-width: 80em;
+  padding: 2em;
   /*border: 3px solid green;*/
 }
 
-.centered {
+.flex-wrapper {
   margin: 0;
   padding: 0;
-  width: 100%;
+  margin-top: 2.2em;
+  /*width: 100%;*/
+  text-align: center;
   /*border: 3px solid green;*/
+}
+
+.card-flex {
+  display: flex;
+  /*flex-direction: row;*/
+  gap: 4em;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.card {
+  background-color: white; /*var(--secondary-color);*/
+  border-radius: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.3rem;
+  padding: 1em;
+  width: 24em;
+  max-width: 14em;
+  color: black;
+}
+
+.card-header {
+  font-family: "Orelega One";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 2rem;
+  margin-bottom: 0.3em;
 }
 
 /*&::before {
@@ -68,10 +123,10 @@ body {
 }*/
 
 .button {
-  display: inline-block;
+  display: inline;
   background-color: var(--primary-text-bg-color);
   margin: 0;
-  padding: 20px;
+  padding: .7em;
   border-radius: 25px;
   font-family: "Patua One";
   font-weight: 400;
