VAR: Changed bg gradient

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@
     linear-gradient(90deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
   --gradient-primary-to-black: 
     linear-gradient(270deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
+  --gradient-primary-to-black-bg: linear-gradient(0deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
 }
 
 html {
-  height: 100%;
   scrollbar-width: none;
 }
 
@@ -28,7 +28,7 @@ html {
 
 body {
   /*overflow: hidden;*/
-  background-color: var(--primary-color);
+  background: var(--gradient-primary-to-black-bg);/*ar(--primary-color);*/
   height: 100%;
   /*border: 3px solid green;*/
 }
@@ -47,12 +47,12 @@ body::-webkit-scrollbar{
 
 .container-left {
   width: auto;
-  background: var(--gradient-black-to-primary);
+  background: var(--gradient-primary-to-black-bg);
 }
 
 .container-right {
   width: auto;
-  background: var(--gradient-primary-to-black);
+  background: var(--gradient-primary-to-black-bg);
 }
 
 .logo {
