--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ html {
 body {
   /*overflow: hidden;*/
   background: var(--gradient-primary-to-black-bg);/*ar(--primary-color);*/
+  background-attachment: fixed;
   height: 100%;
   /*border: 3px solid green;*/
 }
@@ -47,12 +48,12 @@ body::-webkit-scrollbar{
 
 .container-left {
   width: auto;
-  background: var(--gradient-primary-to-black-bg);
+  /*background: var(--gradient-primary-to-black-bg);*/
 }
 
 .container-right {
   width: auto;
-  background: var(--gradient-primary-to-black-bg);
+  /*background: var(--gradient-primary-to-black-bg);*/
 }
 
 .logo {
@@ -62,8 +63,18 @@ body::-webkit-scrollbar{
   font-weight: 400;
   line-height: 1;
   text-align: start;
+  /*-webkit-text-stroke: 2px black;*/
   /*text-decoration-line: underline;*/
   color: var(--primary-text-color);
+}
+
+.slogan {
+  font-family: "Orelega One";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 2rem;
+  color: white;
+  padding: 1em;
 }
 
 .leaf {
@@ -110,12 +121,33 @@ body::-webkit-scrollbar{
   font-style: normal;
   font-weight: normal;
   font-size: 1.3rem;
-  padding: 1em;
+/*  padding: 1em;*/
   min-width: 12em;
   width: 20em;
   max-width: 34em;
   flex-grow: 2;
   color: black;
+  box-shadow: 0 12px 12px 0 rgba(1,0,0,0.2);
+  transition: 0.3s;
+  position: relative;
+  text-align: left;
+}
+
+.card p {
+  padding: 1em;
+}
+
+.card-image {
+  width: 100%;
+  height: 10em;
+  object-fit: cover;
+  border-radius: 1em 1em 0 0;
+}
+
+.upper-card {
+  background-color: red;
+  margin: 0px;
+  padding: 0px;
 }
 
 .card-header {
@@ -123,7 +155,12 @@ body::-webkit-scrollbar{
   font-style: normal;
   font-weight: normal;
   font-size: 2rem;
-  margin-bottom: 0.3em;
+  margin: .3em;
+  padding: 0.1em;
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  background-color: white;
 }
 
 /*&::before {
@@ -133,6 +170,7 @@ body::-webkit-scrollbar{
   width: 0;
   margin-top: calc((1 - 1.2em) * 0.5em);
 }*/
+
 
 .button {
   display: inline;
