--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     linear-gradient(90deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
   --gradient-primary-to-black: 
     linear-gradient(270deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
-  --gradient-primary-to-black-bg: linear-gradient(0deg, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
+  --gradient-primary-to-black-bg: linear-gradient(to bottom, black 0%, var(--primary-text-bg-color) 55%, var(--primary-color) 100%);
 }
 
 html {
@@ -28,9 +28,10 @@ html {
 
 body {
   /*overflow: hidden;*/
-  background: var(--gradient-primary-to-black-bg);/*ar(--primary-color);*/
-  background-attachment: fixed;
+  /*background: var(--gradient-primary-to-black-bg);
+  background-attachment: fixed;*/
   height: 100%;
+  background-color: var(--primary-color);
   /*border: 3px solid green;*/
 }
 
@@ -38,11 +39,49 @@ body::-webkit-scrollbar{
   display: none;
 }
 
+header {
+
+  /*align-items: center;*/
+  /*justify-content: center;*/
+  width: 100%;
+  /*padding-bottom: 2em;
+  padding-top: 2em;*/
+  background-image: url("/img/frosty-header2.jpeg");
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position-x: right;
+}
+
+.header-container {
+  display: grid;
+  grid-template-columns: auto max(42em, 80%) auto;
+  width: 100%;
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.25) 65%, rgba(0,0,0,.75) 100%);
+  padding-top: 2em;
+}
+
+.container-top-left {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+
+  /*background: var(--gradient-primary-to-black-bg);*/
+}
+
+.container-top-right {
+  width: auto;
+
+  /*background: var(--gradient-primary-to-black-bg);*/
+}
+
 .grid-3-cols {
   display: grid;
   width: 100%;
   height: 100%;
   grid-template-columns: auto max(42em, 80%) auto;
+  background: var(--gradient-primary-to-black-bg);/*ar(--primary-color);*/
+  /*background-attachment: fixed;*/
   /*border: 3px solid green;*/
 }
 
@@ -54,6 +93,12 @@ body::-webkit-scrollbar{
 .container-right {
   width: auto;
   /*background: var(--gradient-primary-to-black-bg);*/
+}
+
+.icon-and-logo {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .logo {
@@ -68,13 +113,22 @@ body::-webkit-scrollbar{
   color: var(--primary-text-color);
 }
 
+.logo-img {
+  display: inline;
+  height: 9em;
+}
+
 .slogan {
   font-family: "Orelega One";
   font-style: normal;
   font-weight: normal;
   font-size: 2rem;
   color: white;
-  padding: 1em;
+  margin-top: -0.2em;
+  padding-left: 5em;
+  /*position: absolute;
+  top: 6em;
+  left: 9em;*/
 }
 
 .leaf {
@@ -89,11 +143,11 @@ body::-webkit-scrollbar{
 .container-middle {
   display: flex;
   flex-direction: column;
-  gap: 1em;
-  margin-top: 1em;
+  row-gap: 3em;
+  margin-top: 0em;
   min-width: 38em;
   /*max-width: 90em;*/
-  padding: 2em;
+  padding: 0em;
   /*border: 3px solid green;*/
 }
 
@@ -109,9 +163,11 @@ body::-webkit-scrollbar{
 .card-flex {
   display: flex;
   /*flex-direction: row;*/
-  gap: 4em;
+  column-gap: 5em;
+  row-gap: 4em;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin-top: 3em;
 }
 
 .card {
@@ -180,7 +236,7 @@ body::-webkit-scrollbar{
   border-radius: 25px;
   font-family: "Patua One";
   font-weight: 400;
-  font-size: 18pt;
+  font-size: 2em;
   vertical-align: top;
   color: var(--primary-text-color);
 }
@@ -188,4 +244,23 @@ body::-webkit-scrollbar{
 .button:hover {
   background-color: var(--secondary-text-bg-color);
   color: var(--secondary-text-color);
+}
+
+footer {
+  font-family: "Patua One";
+  font-weight: 400;
+  font-size: 1.2em;
+  color: white;
+  padding: 3em;
+  background-color: var(--primary-color);
+  text-align: center;
+}
+
+.contact {
+  /*display: flex;*/
+  padding: 1em;
+}
+
+.contact a {
+  color: white;
 }
