--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ const headProps = { headProps: await fetchHeader() };
 		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 		<style>
 			@import url('../Common.css');
+			
 		</style>
 		<style>
 			html,
@@ -26,14 +27,20 @@ const headProps = { headProps: await fetchHeader() };
 				font-family: 'Lato';
 				margin: 0;
 				font-size: 16px;
-				padding: 2rem;
+				background-color: white;
+				background-attachment: fixed;
+			}
+			@media (prefers-color-scheme: dark) {
+				body {
+					background-color: black;
+				}
 			}
 		</style>
 	</head>
   <script>
   </script>
 	<body>
-		<main>
+		<main style="display: flex; flex-direction: column; align-items: center; justify-items: center;">
 			<Header {...headProps} client:visible />
 			<Cards {...cards} client:visible />
 			<!-- <Footer {...footProps.fields} client:visible /> -->
