VAR: Zoom for mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,12 @@ const footProps = { footProps: await fetchFooter() };
 					background-color: black;
 				}
 			}
+			@media screen and (max-width: 600px) {				
+				html, body {
+					font-size: 8px;
+				}
+			}
+
 		</style>
 	</head>
   <script>
