--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,15 +23,28 @@ const footProps = { footProps: await fetchFooter() };
 			body {
 				font-family: 'Lato';
 				margin: 0;
+				padding: 0;
 				font-size: 16px;
-				background-color: white;
 				background-attachment: fixed;
+				background-color: white;
 			}
 			@media (prefers-color-scheme: dark) {
-				body {
+				html, body {
+					font-family: 'Lato';
+					margin: 0;
+					padding: 0;
+					font-size: 16px;
+					background-attachment: fixed;
 					background-color: black;
 				}
 			}
+
+			@media screen and (max-width: 900px) {				
+				html, body {
+					font-size: 12px;
+				}
+			}
+
 			@media screen and (max-width: 700px) {				
 				html, body {
 					font-size: 8px;
