VAR: Test to fix margin error on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,7 @@ const footProps = { footProps: await fetchFooter() };
 				font-family: 'Lato';
 				margin: 0;
 				padding: 0;
+				height: 100%;
 				font-size: 16px;
 				background-attachment: fixed;
 				background-color: white;
@@ -33,6 +34,7 @@ const footProps = { footProps: await fetchFooter() };
 					font-family: 'Lato';
 					margin: 0;
 					padding: 0;
+					height: 100%;
 					font-size: 16px;
 					background-attachment: fixed;
 					background-color: black;
