--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const footProps = { footProps: await fetchFooter() };
   <script>
   </script>
 	<body>
-		<main style="display: flex; flex-direction: column; align-items: center; justify-items: center;">
+		<main style="display: flex; flex-direction: column; align-items: center; justify-items: center; height: 100%; width: 100%;">
 			<Header {...headProps} client:visible />
 			<Cards {...cards} client:visible />
 			<Footer {...footProps} client:visible />
