VAR: Added bigger footer and smooth scroll

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,7 @@ const footProps = { footProps: await fetchFooter() };
 				font-size: 16px;
 				background-attachment: fixed;
 				background-color: white;
+				scroll-behavior: smooth;
 			}
 			@media (prefers-color-scheme: dark) {
 				html, body {
@@ -38,6 +39,7 @@ const footProps = { footProps: await fetchFooter() };
 					font-size: 16px;
 					background-attachment: fixed;
 					background-color: black;
+					scroll-behavior: smooth;
 				}
 			}
 
