--- a/src/pages/2_60.astro
+++ b/src/pages/2_60.astro
@@ -47,7 +47,7 @@ const searchParams = new URLSearchParams(Astro.request.url);
 			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="css/Common.css" />
+		<link rel="stylesheet" href="../css/Common.css" />
 		<style>
 			html,
 			body {
