WIP: New videos

--- a/src/pages/[video]-[bright]/index.astro
+++ b/src/pages/[video]-[bright]/index.astro
@@ -43,6 +43,12 @@ export function getStaticPaths() {
 		{ params: { video: '5', bright: 60 } },
 		{ params: { video: '5', bright: 80 } },
 		{ params: { video: '5', bright: 100 } },
+		{ params: { video: '6', bright: 60 } },
+		{ params: { video: '6', bright: 80 } },
+		{ params: { video: '6', bright: 100 } },
+		{ params: { video: '7', bright: 60 } },
+		{ params: { video: '7', bright: 80 } },
+		{ params: { video: '7', bright: 100 } },
 	];
 }
 const headProps = {
