--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ const searchParams = new URLSearchParams(Astro.request.url);
 				font-family: "Lato";
 				margin: 0;
 				padding: 0;
-				height: 100%;
+				height: 100svh;
 				font-size: 16px;
 				background-attachment: fixed;
 				background-color: white;
@@ -66,7 +66,7 @@ const searchParams = new URLSearchParams(Astro.request.url);
 					font-family: "Lato";
 					margin: 0;
 					padding: 0;
-					height: 100%;
+					height: 100svh;
 					font-size: 16px;
 					background-attachment: fixed;
 					background-color: black;
@@ -93,7 +93,7 @@ const searchParams = new URLSearchParams(Astro.request.url);
 	</script>
 	<body>
 		<main
-			style="display: flex; flex-direction: column; align-items: center; min-width: 40rem"
+			style="display: flex; flex-direction: column; align-items: center"
 		>
 			<Header {...headProps} client:visible />
 			<Cards {...cards} client:visible />
