VAR: First draft of member area

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,17 +28,46 @@ import { fetchCards, fetchHeader, fetchFooter } from "../utils/contentful";
 const cards = { cards: await fetchCards() };
 const team = {
 	team: {
-		textColor: "",
-		backgroundColor: "",
+		textColor: "#efe9e0",
+		//backgroundColor: "#4f4f4e",
+		backgroundColor: "#86ad9e",
 		members: [
 			{
-				title: "asdf",
-				text: "Manager",
-				image_url: "",
-				backgroundColor: "",
-				textColor: "",
-				linkedin_url: "",
-			}
+				name: "Mats Saxer",
+				title: "CEO",
+				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+				linkedin_url: "https://www.linkedin.com/in/saxer/",
+			},
+			{
+				name: "Johan Burell",
+				title: "Developer",
+				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+			},
+			{
+				name: "Johan Burell",
+				title: "Developer",
+				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+			},
+			{
+				name: "Mats Saxer",
+				title: "CEO",
+				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+				linkedin_url: "https://www.linkedin.com/in/saxer/",
+			},
+			{
+				name: "Johan Burell",
+				title: "Developer",
+				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+			},
+			{
+				name: "Johan Burell",
+				title: "Developer",
+				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+			},
 		]
 	}
 };
