VAR: Footer and team area

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Cards from "../components/Cards";
 import Team from "../components/Team";
 import Header from "../components/Header";
 import Footer from "../components/Footer";
-import { fetchCards, fetchHeader, fetchFooter } from "../utils/contentful";
+import { fetchCards, fetchTeam, fetchHeader, fetchFooter } from "../utils/contentful";
 //import { useMediaQuery } from 'react-responsive'
 //const isBigScreen = useMediaQuery({ query: '(min-width: 900px)' })
 //const isMediumScreen = useMediaQuery({ query: '(max-width: 700px)' })
@@ -26,51 +26,57 @@ import { fetchCards, fetchHeader, fetchFooter } from "../utils/contentful";
 //const bright = Astro.url.searchParams.get('bright')! || '60';
 
 const cards = { cards: await fetchCards() };
-const team = {
-	team: {
+const team = { team: {
 		textColor: "#efe9e0",
-		//backgroundColor: "#4f4f4e",
 		backgroundColor: "#86ad9e",
-		members: [
-			{
-				name: "Mats Saxer",
-				title: "CEO",
-				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
-				linkedin_url: "https://www.linkedin.com/in/saxer/",
-			},
-			{
-				name: "Johan Burell",
-				title: "Developer",
-				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
-				linkedin_url: "https://www.linkedin.com/in/johanburell/",
-			},
-			{
-				name: "Johan Burell",
-				title: "Developer",
-				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
-				linkedin_url: "https://www.linkedin.com/in/johanburell/",
-			},
-			{
-				name: "Mats Saxer",
-				title: "CEO",
-				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
-				linkedin_url: "https://www.linkedin.com/in/saxer/",
-			},
-			{
-				name: "Johan Burell",
-				title: "Developer",
-				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
-				linkedin_url: "https://www.linkedin.com/in/johanburell/",
-			},
-			{
-				name: "Johan Burell",
-				title: "Developer",
-				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
-				linkedin_url: "https://www.linkedin.com/in/johanburell/",
-			},
-		]
-	}
+		members:	await fetchTeam(),
+	} 
 };
+//const team = {
+//	team: {
+//		textColor: "#efe9e0",
+//		//backgroundColor: "#4f4f4e",
+//		backgroundColor: "#86ad9e",
+//		members: [
+//			{
+//				name: "Mats Saxer",
+//				title: "CEO",
+//				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+//				linkedin_url: "https://www.linkedin.com/in/saxer/",
+//			},
+//			{
+//				name: "Johan Burell",
+//				title: "Developer",
+//				image_url: "../img/Johan%20Burell%20-%20profil.png",
+//				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+//			},
+//			{
+//				name: "Johan Burell",
+//				title: "Developer",
+//				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+//				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+//			},
+//			{
+//				name: "Mats Saxer",
+//				title: "CEO",
+//				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+//				linkedin_url: "https://www.linkedin.com/in/saxer/",
+//			},
+//			{
+//				name: "Johan Burell",
+//				title: "Developer",
+//				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+//				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+//			},
+//			{
+//				name: "Johan Burell",
+//				title: "Developer",
+//				image_url: "http://images.ctfassets.net/8s1ond3x79i6/73AX9MjykPccABRvvvWi6V/79e7ba6672490419d1fca8999bfc36de/mats_saxer_profile.png",
+//				linkedin_url: "https://www.linkedin.com/in/johanburell/",
+//			},
+//		]
+//	}
+//};
 const headProps = {
 	videoNumber: 0,
 	bright: 90,
