--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -29,6 +29,28 @@ section {
   /* min-width: 100%; */
 }
 
+.cta-ball {
+  position: absolute;
+  right: 4rem;
+  width: 9ch;
+  padding: 2.5rem 1.25rem;
+  bottom: -4rem;
+  rotate: 15deg;
+  color: #efe9e0;
+  background-color: #ab6c5b;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  font-weight: 400;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+
+.cta-ball:hover {
+  background-color: #9f5743;
+}
+
 @media screen and (max-width: 700px) {				
   .cardTextCell {
     padding: 4rem;
