VAR: Layout tweaks

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,7 +5,8 @@
 .cardTextCell { 
   /* padding: 5rem 7rem 5rem 7rem; */
   /* padding: 6rem 6rem 6rem 6rem; */
-  padding: 4rem 0 4rem 0;
+  /* padding: 4rem 0; */
+  padding: 4rem;
 }
 
 
@@ -13,7 +14,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 4rem;
+  /* gap: 4rem; */
 }
 
 .cta-ball {
