--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -11,7 +11,8 @@ code {
   /* padding: 5rem 7rem 5rem 7rem; */
   /* padding: 6rem 6rem 6rem 6rem; */
   /* padding: 4rem 0; */
-  padding: 4rem;
+  padding: 0rem;
+  /* padding: 4rem; */
 }
 
 
@@ -47,7 +48,8 @@ code {
 
 @media screen and (max-width: 700px) {				
   .cardTextCell {
-    padding: 4rem;
+    padding: 0rem;
+    /* padding: 4rem; */
   }
 
   .rowStyle {
