VAR: Added Open Graph metadata

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,6 +96,18 @@ const footProps = { footProps: await fetchFooter() };
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="generator" content={Astro.generator} />
 		<base href="." />
+		<meta property="og:title" content="Vi är Mint" />
+		<meta property="og:description" content="Den nya expertbyrån med hjärtat på rätta stället. Vi rådger och hjälper företag att bli kundfokuserade" />
+		<meta property="og:locale" content="sv_SE" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.mint.se" />
+		<meta property="og:image" content="https://mint.se/img/signal-2023-11-23-205548_002_cropped_short.jpeg" />
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="http://www.mint.se">
+		<!-- <meta name="twitter:creator" content="@burre83"> -->
+		<meta name="twitter:title" content="Vi är Mint">
+		<meta name="twitter:description" content="Den nya expertbyrån med hjärtat på rätta stället. Vi rådger och hjälper företag att bli kundfokuserade">
+		<meta name="twitter:image" content="https://mint.se/img/signal-2023-11-23-205548_002_cropped_short.jpeg">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
