--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,17 +97,19 @@ const footProps = { footProps: await fetchFooter() };
 		<meta name="generator" content={Astro.generator} />
 		<base href="." />
 		<meta property="og:title" content="Vi är Mint" />
-		<meta property="og:description" content="Den nya expertbyrån med hjärtat på rätta stället. Vi rådger och hjälper företag att bli kundfokuserade" />
+		<meta property="og:description" content="Den nya expertbyrån med hjärtat på rätta stället.
+Vi rådger och hjälper företag att bli kundfokuserade" />
 		<meta property="og:locale" content="sv_SE" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://www.mint.se" />
-		<meta property="og:image" content="https://mint.se/img/ogp_crop.jpeg" />
+		<meta property="og:image" content="https://mint.se/img/ogp_crop2.jpeg" />
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="http://www.mint.se">
 		<!-- <meta name="twitter:creator" content="@burre83"> -->
 		<meta name="twitter:title" content="Vi är Mint">
-		<meta name="twitter:description" content="Den nya expertbyrån med hjärtat på rätta stället. Vi rådger och hjälper företag att bli kundfokuserade">
-		<meta name="twitter:image" content="https://mint.se/img/ogp_crop.jpeg">
+		<meta name="twitter:description" content="Den nya expertbyrån med hjärtat på rätta stället.
+Vi rådger och hjälper företag att bli kundfokuserade">
+		<meta name="twitter:image" content="https://mint.se/img/ogp_crop2.jpeg">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
