VAR: Added page for presentation

--- a/src/pages/det-varas-for-funk.astro
+++ b/src/pages/det-varas-for-funk.astro
@@ -74,11 +74,42 @@
 		<!-- End Matomo Code -->
 	</head>
 	<script></script>
-	<body>
+	<body style="background-color: #cedcd5; height: 100svh">
 		<!-- <main style="display: flex; flex-direction: column; align-items: center"> -->
 		<!-- <main style="display: grid; grid-template-columns: auto 1800px auto;"> -->
-		<main>
-      <h1>Det våras för funktioner</h1>
+		<main style="display: grid;  grid-template-columns: auto max(42rem, 40%) auto; background-color: #cedcd5;">
+		<!-- <main style="display: grid;  grid-template-columns: auto 42rem auto;"> -->
+      <section id="left"></section>
+			<section id="mid" style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%">
+					<a href="https://docs.google.com/presentation/d/1xyErpUc0WHp04baHzFOGtuCPFL-RT0sTjN8A1al_Px0/edit?usp=sharing" target="_blank"><img style="padding-top: 8rem; object-fit: cover; width: 100%; filter: drop-shadow(.5rem .5rem .5rem black)" src="../../img/det_varas_for_funk.png"></img></a>
+					<div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+						<!-- <a href="https://docs.google.com/presentation/d/1xyErpUc0WHp04baHzFOGtuCPFL-RT0sTjN8A1al_Px0/edit?usp=sharing" 
+							target="_blank" 
+							onmouseover="this.style.color='#86ad9e'"
+							onmouseout="this.style.color='#50504f'"
+							style="color: #50504f; margin: 0; padding: 2rem 2rem 2rem 2rem; font-family: Lato; font-weight: 700; font-size: 4rem; text-decoration: none;">Läs</a> -->
+						<div style="display: flex; flex-direction: row; justify-content: center; ">
+							<a href="../img/Det%20våras%20för%20funktioner.pptx" 
+								target="_blank" 
+								onmouseover="this.style.color='#86ad9e'"
+								onmouseout="this.style.color='#50504f'"
+								style="color: #50504f; margin: 0; padding: 2rem 2rem 2rem 2rem; font-family: Lato; font-weight: 700; font-size: 2rem; text-decoration: none;">Hämta (PowerPoint)</a>
+							<a href="../img/Det%20våras%20för%20funktioner.pdf" 
+								target="_blank" 
+								onmouseover="this.style.color='#86ad9e'"
+								onmouseout="this.style.color='#50504f'"
+								style="color: #50504f; margin: 0; padding: 2rem 2rem 2rem 2rem; font-family: Lato; font-weight: 700; font-size: 2rem; text-decoration: none;">Hämta (PDF)</a>
+						</div>	
+					</div>
+					<a href="https://mint.se" 
+					target="_blank"><img style="width: 10rem; object-fit: cover; padding: 2rem 0 0.5rem 0; object-position: 50% 50%;" src="../img/mint_logo_negativ_RGB.png"></img></a>
+					<a href="https://mint.se" 
+					target="_blank" 
+					onmouseover="this.style.color='#86ad9e'"
+					onmouseout="this.style.color='#50504f'"
+					style="color: #50504f; margin: 0; padding: 0rem 2rem 1rem 2rem; font-family: Lato; font-weight: 700; font-size: 1.5rem; text-decoration: none;">Om Mint</a>
+			</section>
+      <section id="right"></section>
 		</main>
 	</body>
 </html>
