--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Team from "../components/Team";
 import Header from "../components/Header";
 import Footer from "../components/Footer";
 import { fetchCards, fetchTeam, fetchHeader, fetchFooter } from "../utils/contentful";
+
 //import { useMediaQuery } from 'react-responsive'
 //const isBigScreen = useMediaQuery({ query: '(min-width: 900px)' })
 //const isMediumScreen = useMediaQuery({ query: '(max-width: 700px)' })
@@ -24,6 +25,7 @@ import { fetchCards, fetchTeam, fetchHeader, fetchFooter } from "../utils/conten
 
 //const video = Astro.url.searchParams.get('video')! || '0';
 //const bright = Astro.url.searchParams.get('bright')! || '60';
+
 
 const cards = { 
 	cards: await fetchCards() 
@@ -143,7 +145,7 @@ Vi rådger och hjälper företag att bli kundfokuserade">
 				}
 			}
 
-			@media screen and (max-width: 900px),
+			@media screen and (max-width: 1080px),
 			screen and (max-height: 545px) {
 				html,
 				body {
@@ -151,7 +153,7 @@ Vi rådger och hjälper företag att bli kundfokuserade">
 				}
 			}
 
-			@media screen and (max-width: 600px),
+			@media screen and (max-width: 680px),
 			screen and (max-height: 345px) {
 				html,
 				body {
@@ -175,7 +177,37 @@ Vi rådger och hjälper företag att bli kundfokuserade">
 		</script>
 		<!-- End Matomo Code -->
 	</head>
-	<script></script>
+	<script>
+		import * as basicScroll from 'basicscroll';
+		const navbarAnim = basicScroll.create({
+			elem: document.querySelector('.navbar'),
+			from: '0',
+			to: '500px',
+			props: {
+				'--opacity': {
+					from: 0,
+					to: 1
+				},
+				'--navHeight': {
+					from: '8rem',
+					to: '6rem'
+				}
+			}
+		});
+		navbarAnim.start();
+		const navbarHeight = basicScroll.create({
+			elem: document.querySelector('.navbar'),
+			from: '0',
+			to: '500px',
+			props: {
+				'--navSize': {
+					from: '6rem',
+					to: '4rem'
+				}
+			}
+		});
+		navbarHeight.start();
+	</script>
 	<body>
 		<!-- <main style="display: flex; flex-direction: column; align-items: center"> -->
 		<!-- <main style="display: grid; grid-template-columns: auto 1800px auto;"> -->
