--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,7 +6,7 @@
     <a href='#toprow'><img class="img-style" src="../img/mint_logo_postitiv_RGB.svg" /></a>
     <div class="nav-text-style">
       <a href="#vision" class="nav-link-style">Vision</a>
-      <a href="#omoss" class="nav-link-style">Om Oss</a>
+      <a href="#omoss" class="nav-link-style">Om oss</a>
       <a href="#roller" class="nav-link-style">Roller</a>
       <a href="https://mint-1712829496.teamtailor.com/" target="_blank" class="nav-link-style">Mint & Friends</a>
       <a href="#kompis" class="nav-link-style">Kontakt</a>
