--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,8 +1,8 @@
 ---
 ---
 
-<div id='navbar' class="nav-bar-style">
-  <div class="nav-line-style">
+<div class="nav-bar-style navbar">
+  <div class="nav-line-style navbar">
     <a href='#toprow'><img class="img-style" src="../img/mint_logo_postitiv_RGB.svg" /></a>
     <div class="nav-text-style">
       <a href="#vision" class="nav-link-style">Vision</a>
@@ -27,7 +27,8 @@
   .nav-line-style {
     display: flex;
     width: 100%;
-    max-height: 8rem;
+    max-height: var(--navHeight);
+    will-change: max-height;
   }
 
   .nav-text-style {
@@ -39,13 +40,12 @@
   }
 
   .nav-link-style {
-    font-size: 2.25rem;
+    font-size: 1.5rem;
     text-align: right;
-    line-height: 6rem;
-    padding-right: 2rem;
-    padding-bottom: 1rem;
+    line-height: var(--navSize);
     color: #595959;
-    padding: 0 1.5rem 0 1.5rem;
+    padding: 0 1rem 0 1rem;
     text-decoration: none;
+    will-change: line-height;
   }
 </style>
